--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h1 class="home__name">
             Dipesh Donda
           </h1>
-          <h3 class="home__profession">Financial Planner</h3>
+          <h3 class="home__profession">Financial Advisor</h3>
           <a href="#work" class="buttons">
             <button class="button home__button">
               <a href="https://calendly.com/dipeshdonda" target="_blank">Book an appointment</a>
@@ -123,7 +123,7 @@
             </div>
           </div>
           </a>
-          <a href="">
+          <a href="https://livemore.net/dipesh_donda" target="_blank" class="btn btn-hover">
           <div class="card">
             <div class="container-card bg-white-box">
               <svg width= "80" height="80" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><defs><style>.cls-2{fill:#5b97c4}.cls-3{fill:#8cbce7}.cls-4{fill:silver}.cls-7{fill:#2b2b4c}</style></defs><g id="travel_Insurance" data-name="travel Insurance"><path d="M39 16H25a1 1 0 0 1-1-1v-4.33A3.68 3.68 0 0 1 27.67 7h8.66A3.68 3.68 0 0 1 40 10.67V15a1 1 0 0 1-1 1zm-13-2h12v-3.33A1.67 1.67 0 0 0 36.33 9h-8.66A1.67 1.67 0 0 0 26 10.67z" style="fill:#8d8d8d"/><path class="cls-2" d="M15 15v35h-2.62A4.37 4.37 0 0 1 8 45.9a2.62 2.62 0 0 1 0-.28V19.38A4.38 4.38 0 0 1 12 15h.38z"/><path class="cls-3" d="M12 15v26a5 5 0 0 1-4 4.9 2.62 2.62 0 0 1 0-.28V19.38A4.38 4.38 0 0 1 12 15z"/><path class="cls-2" d="M44 15v18.85l-.9.26H43L40 35l-2 .57v9.33a11.9 11.9 0 0 0 .6 3.11 11.1 11.1 0 0 0 .87 2H20V15z"/><path class="cls-3" d="M20 15h21v11a21 21 0 0 1-21 21V15z"/><path class="cls-2" d="M56 19.38v16.18l-1.45-.41-3.55-1-2-.57V15h2.64A4.37 4.37 0 0 1 56 19.38z"/><path class="cls-3" d="M53 15.22V28a4 4 0 0 1-4 4V15h2.64a4.35 4.35 0 0 1 1.36.22z"/><path class="cls-4" d="M49 15v18.57l-.87-.25L47 33l-1 .28-2 .57V15a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z"/><path d="M56 35.56v8.58a11.78 11.78 0 0 1-.54 3.57A12.11 12.11 0 0 1 53 52.22c-.23.27-.48.53-.74.78A12.52 12.52 0 0 1 47 56a12.37 12.37 0 0 1-4.06-2l-.28-.21a10.77 10.77 0 0 1-.88-.77 12.51 12.51 0 0 1-2.21-2.86.91.91 0 0 1-.07-.16 11.1 11.1 0 0 1-.87-2 11.9 11.9 0 0 1-.6-3.11v-9.33L40 35l3-.85h.1l.9-.26 2-.57 1-.32 1.13.32.87.25 2 .57 3.55 1z" style="fill:#f79341"/><path d="M53 34.71v6.43A12.34 12.34 0 0 1 44 53a12.39 12.39 0 0 1-3.77-1.8A12.31 12.31 0 0 1 38 44.14v-8.58L47 33z" style="fill:#ffb248"/><rect class="cls-4" x="15" y="14" width="5" height="37" rx="1" ry="1"/><path class="cls-7" d="M15 51h-2.62A5.38 5.38 0 0 1 7 45.62V27a1 1 0 0 1 2 0v18.62A3.39 3.39 0 0 0 12.38 49H14V16h-1.62A3.39 3.39 0 0 0 9 19.38V23a1 1 0 0 1-2 0v-3.62A5.38 5.38 0 0 1 12.38 14H15a1 1 0 0 1 1 1v35a1 1 0 0 1-1 1zM39.5 51H20a1 1 0 0 1-1-1v-3a1 1 0 0 1 2 0v2h16.92c-.09-.24-.17-.47-.24-.7a12.5 12.5 0 0 1-.68-3.36v-9.38a1 1 0 0 1 .73-1L43 33.1V16H21v27a1 1 0 0 1-2 0V15a1 1 0 0 1 1-1h24a1 1 0 0 1 1 1v18.85a1 1 0 0 1-.72 1L39 36.31v8.5a10.8 10.8 0 0 0 .55 2.87 10.27 10.27 0 0 0 .8 1.84 1 1 0 0 1 0 1 1 1 0 0 1-.85.48zM56 36.56a.84.84 0 0 1-.27 0l-7-2a1 1 0 0 1-.73-1V15a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v16.82l5 1.42V19.38a3.32 3.32 0 0 0-1.62-2.88 1 1 0 0 1 1-1.72 5.36 5.36 0 0 1 2.6 4.6v16.18a1 1 0 0 1-.4.8 1 1 0 0 1-.58.2z"/><path class="cls-7" d="M44 34.85a1 1 0 0 1-1-1V15a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v18.57a1 1 0 0 1-.4.8 1 1 0 0 1-.88.16L47 34l-2.73.77a.84.84 0 0 1-.27.08zM45 15v17.53l1.73-.53a1 1 0 0 1 .54 0l.73.2V15zm3 0zM46 48a1 1 0 0 1-.71-.29l-2.5-2.5a1 1 0 0 1 1.42-1.42l1.79 1.8 4.29-4.3a1 1 0 0 1 1.42 1.42l-5 5A1 1 0 0 1 46 48z"/><path class="cls-7" d="M47 57a.9.9 0 0 1-.28 0 13.33 13.33 0 0 1-4.38-2.18l-.3-.22a11 11 0 0 1-.95-.84 13.25 13.25 0 0 1-2.39-3.09.93.93 0 0 1-.1-.2 11 11 0 0 1-.92-2.13 12.5 12.5 0 0 1-.68-3.4v-9.38a1 1 0 0 1 .73-1l9-2.56a1 1 0 0 1 .54 0l9 2.56a1 1 0 0 1 .73 1V38a1 1 0 0 1-2 0v-1.68L47 34l-8 2.27v8.5a10.8 10.8 0 0 0 .55 2.87 10.27 10.27 0 0 0 .8 1.84v.11a11.77 11.77 0 0 0 2 2.65c.26.24.52.48.8.7l.24.18A11.7 11.7 0 0 0 47 55a11.65 11.65 0 0 0 4.54-2.68c.23-.23.46-.46.67-.71a11 11 0 0 0 2.29-4.15 10.81 10.81 0 0 0 .5-3.28V42a1 1 0 0 1 2 0v2.14a12.68 12.68 0 0 1-.59 3.86 13.1 13.1 0 0 1-2.69 4.87 10.41 10.41 0 0 1-.8.84A13.6 13.6 0 0 1 47.28 57a.9.9 0 0 1-.28 0zM19 52h-3a2 2 0 0 1-2-2V15a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v28a1 1 0 0 1-2 0V15h-3v35h3v-3a1 1 0 0 1 2 0v3a2 2 0 0 1-2 2z"/><path class="cls-7" d="M16 52h-1a1 1 0 0 1-1-1v-1a1 1 0 0 1 2 0 1 1 0 0 1 0 2zM20 52h-1a1 1 0 0 1 0-2 1 1 0 0 1 2 0v1a1 1 0 0 1-1 1z"/></g></svg>
@@ -151,8 +151,8 @@
       <!--==================== INVESTMENT & PLANNING ====================-->
       <section class="work section" id="investment">
         <h2 class="section__title">INVESTMENT & PLANNING</h2>
-        <a href="https://livemore.net/dipesh_donda" target="_blank">
-        <div class="gradient-cards">
+        <a href="https://livemore.net/dipesh_donda" target="_blank" class="btn btn-hover">
+          <div class="gradient-cards">
           <div class="card">
             <div class="container-card bg-white-box">
               <svg width="80" height="80" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve"><path style="fill:#5c6670" d="M95.664 472.917c-48.324 0-87.636-39.312-87.636-87.636 0-48.326 39.312-87.638 87.636-87.638h320.672c48.323 0 87.637 39.312 87.637 87.638 0 48.323-39.314 87.636-87.637 87.636H95.664z"/><path style="fill:#333e48" d="M416.336 441.742c31.183 0 56.461-25.28 56.461-56.461 0-31.184-25.278-56.462-56.461-56.462H95.663c-31.182 0-56.461 25.278-56.461 56.462 0 31.181 25.279 56.461 56.461 56.461h320.673z"/><path style="opacity:.2;enable-background:new" d="M416.335 297.643H95.664c-26.416 0-50.12 11.763-66.2 30.308 15.135 45.588 43.65 85.061 80.881 113.791h291.31c37.231-28.731 65.747-68.203 80.881-113.791-16.081-18.544-39.786-30.308-66.201-30.308z"/><path style="fill:#ffc843" d="M256 39.083c-117.983 0-213.626 95.643-213.626 213.624 0 82.024 46.235 153.236 114.056 189.034h199.144c67.82-35.798 114.053-107.011 114.053-189.034C469.625 134.727 373.983 39.083 256 39.083z"/><circle style="fill:#d49000" cx="256.003" cy="252.707" r="173.362"/><path style="fill:#ffc843" d="M258.673 124.501c8.567 0 15.363 6.795 15.363 15.361v4.135c15.952 2.363 30.131 7.091 42.835 14.178 5.614 3.254 10.636 8.866 10.636 17.729 0 11.224-8.863 19.789-20.09 19.789-3.543 0-7.088-.883-10.339-2.657-8.27-4.43-16.54-7.977-24.518-10.046v44.904c44.903 12.11 64.106 30.43 64.106 63.511 0 33.089-25.404 54.357-62.628 58.494v15.656c0 8.568-6.796 15.36-15.363 15.36-8.566 0-15.361-6.792-15.361-15.36v-15.951c-20.973-2.66-40.767-10.044-58.195-20.68-6.203-3.838-10.044-9.749-10.044-17.725 0-11.521 8.862-20.087 20.383-20.087 3.839 0 7.975 1.478 11.521 3.841 12.406 7.976 24.225 13.587 37.813 16.541v-46.97c-42.539-11.521-63.514-27.77-63.514-62.924 0-32.492 24.816-54.356 62.036-58.193v-3.546c-.003-8.566 6.793-15.36 15.359-15.36zm-13.884 95.711v-39.881c-14.18 2.069-20.384 9.159-20.384 18.611.001 9.158 4.136 15.363 20.384 21.27zm27.768 51.698v41.06c13.883-2.064 20.974-8.566 20.974-19.202-.001-9.747-5.022-16.247-20.974-21.858z"/><path style="fill:#1e252b" d="M470.991 306.797a222.47 222.47 0 0 0 6.662-54.09c0-122.22-99.432-221.652-221.653-221.652S34.346 130.488 34.346 252.708a222.45 222.45 0 0 0 6.664 54.098C15.567 324.608 0 354.126 0 385.281c0 52.748 42.914 95.663 95.664 95.663h320.672c52.749 0 95.665-42.915 95.665-95.664-.001-31.637-15.222-60.548-41.01-78.483zM256 47.111c113.367 0 205.598 92.23 205.598 205.597 0 75.829-41.352 145-108.049 181.007h-85.898c94.61-6.028 169.74-84.901 169.74-181.007 0-100.019-81.371-181.391-181.391-181.391S74.609 152.688 74.609 252.708c0 96.106 75.13 174.979 169.74 181.007h-85.896c-66.698-36.01-108.052-105.18-108.052-181.007 0-113.367 92.231-205.597 205.599-205.597zm197.266 306.833c7.389 8.669 11.504 19.656 11.504 31.336 0 26.706-21.728 48.434-48.434 48.434H383.97c29.538-20.859 53.162-48.315 69.296-79.77zM256 418.044c-91.166 0-165.336-74.17-165.336-165.337S164.833 87.372 256 87.372s165.336 74.169 165.336 165.336S347.167 418.044 256 418.044zm-127.967 15.671H95.664c-26.707 0-48.434-21.728-48.434-48.434 0-11.681 4.114-22.67 11.504-31.335 16.134 31.453 39.759 58.909 69.299 79.769zm288.302 31.174H95.664c-43.897 0-79.608-35.712-79.608-79.608 0-24.49 10.953-46.999 29.751-62.039a221.195 221.195 0 0 0 5.674 15.084c-12.965 12.16-20.305 28.94-20.305 46.955 0 35.56 28.929 64.489 64.489 64.489h320.673c35.56 0 64.489-28.929 64.489-64.489 0-18.015-7.339-34.795-20.305-46.955 2.07-4.95 3.965-9.981 5.674-15.087 18.797 15.046 29.751 37.565 29.751 62.042-.002 43.896-35.716 79.608-79.612 79.608z"/></svg>
@@ -170,12 +170,12 @@
           </div>
         </div>
         </a>
-      </div>
       </section>
 
       <!--==================== Mortgage - Debt Solutions ====================-->
       <section class="work section" id="mortgage">
         <h2 class="section__title">Mortgage - Debt Solutions </h2>
+        <a href="https://calendly.com/dipeshdonda" target="_blank" class="btn btn-hover">
         <div class="gradient-cards">
             <div class="card">
               <div class="container-card bg-white-box">
@@ -185,8 +185,9 @@
                 <p class="card-title">Mortgage Lending</p>
                 <p class="card-title">Budget Solutions</p>
               </div>
+            </div>
           </div>
-        </div>
+        </a>
       </section>
 
       <!--==================== Business Opportunity ====================-->
