topic change updated

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </main>
     <!-- ==================Other Services============================= -->
     <section class="work section" id="otherServices">
-      <h2 class="section__title">Legal / ID Theft Defence</h2>
+      <h2 class="section__title">Legal & ID Theft Defence</h2>
       <a href="https://primerica.legalshield.com/enrollment?agent=BFG6K" target="_blank">
       <div class="gradient-cards">
           <div class="card">
