navbar topic name changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a href="#businessOpportunity" class="nav__link">Business Opportunity</a>
             </li>
             <li>
-              <a href="#otherServices" class="nav__link">Other Services</a>
+              <a href="#otherServices" class="nav__link">Legal & ID Theft</a>
             </li>
             <!-- Add this inside the <nav> element -->
             <div class="toggle-switch">
